Fix .btn-hollow flicker when clicked

--- a/app/assets/stylesheets/bootstrap/_buttons.scss
+++ b/app/assets/stylesheets/bootstrap/_buttons.scss
@@ -18,4 +18,8 @@
     background: transparent;
     color: white;
   }
+
+  &:active, &:focus {
+    @extend .color-bg;
+  }
 }
